--- a/Strategy/Config/strategyconfig.json
+++ b/Strategy/Config/strategyconfig.json
@@ -3,5 +3,6 @@
   "stocklist" : ["600060","600000", "600516"],
   "initmoney" : 1000000,
   "commision" : 0.001,
-  "slipage" : 0.001
+  "slipage" : 0.001,
+  "buffersize" : 100
 }
